# GraBbit

./: Cargo.toml  README.md  clipboard_history.json
src/: clipboard.rs  main.rs  network.rs  security.rs  storage.rs
src/gui/: app.rs  mod.rs  styles.rs
src/gui/components/: clipboard_item.rs  header.rs  mod.rs  option_button.rs  stat_card.rs
src/gui/views/: about.rs  dashboard.rs  mod.rs  settings.rs
