[package]
name = "Grabbit"
version = "0.1.0"
edition = "2024"

[dependencies]

image = "0.25.8"
#bytes = "1.10.1"  # to manuplate the monsters with h[w]
flate2 = "1.1.4"
aes-gcm = "0.10.3"
#generic-array = "0.14.7"
typenum = "1.19.0"
arboard = "3.6"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
serde_json = "1.0.145"
whoami = "1.6.1"
regex = "1.12.2"
url = "2.5.7"
sha2 = "0.11.0-rc.2"
zstd = "0.13.3"
rand = "0.10.0-rc.0"
byteorder = "1.5.0"
hex = "0.4.3"
chacha20poly1305 = "0.10.1"
base64 = "0.22.1"