[package]
name = "Grabbit"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
iced = { version = "0.10", features = ["image"] }

# Clipboard
arboard = "3.6"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"

# System info
whoami = "1.6.1"

# File detection
regex = "1.12.2"
url = "2.5.7"

# Encryption (optional - not used in basic mode)
chacha20poly1305 = "0.10.1"
base64 = "0.22.1"
hex = "0.4.3"
rand = "0.10.0-rc.0"
zstd = "0.13.3"
image = "0.25.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# mDNS discovery
mdns-sd = "0.10.3"



# Configuration
config = "0.14.0"

# Platform directories
dirs = "5.0"
